--- a/GammaRayConfig.cmake.in
+++ b/GammaRayConfig.cmake.in
@@ -22,6 +22,7 @@ set(GAMMARAY_PROBE_PLUGIN_INSTALL_DIR @PROBE_PLUGIN_INSTALL_DIR@)
 
 set(GAMMARAY_BUILD_UI @GAMMARAY_BUILD_UI@)
 set(GAMMARAY_PROBE_ONLY_BUILD @GAMMARAY_PROBE_ONLY_BUILD@)
+set(GAMMARAY_ALWAYS_INSTALL_HEADERS @GAMMARAY_ALWAYS_INSTALL_HEADERS@)
 
 set(GAMMARAY_STATIC_PROBE @GAMMARAY_STATIC_PROBE@)
 set(GAMMARAY_LIBRARY_TYPE @GAMMARAY_LIBRARY_TYPE@)
