--- a/GammaRayConfig.cmake.in
+++ b/GammaRayConfig.cmake.in
@@ -24,8 +24,10 @@ set(GAMMARAY_BUILD_UI @GAMMARAY_BUILD_UI@)
 set(GAMMARAY_PROBE_ONLY_BUILD @GAMMARAY_PROBE_ONLY_BUILD@)
 
 set(GAMMARAY_STATIC_PROBE @GAMMARAY_STATIC_PROBE@)
-set(GAMMARAY_LIBRARY_TYPE @GAMMARAY_LIBRARY_TYPE@)
-set(GAMMARAY_PLUGIN_TYPE @GAMMARAY_PLUGIN_TYPE@)
+set(GAMMARAY_UI_LIBRARY_TYPE @GAMMARAY_UI_LIBRARY_TYPE@)
+set(GAMMARAY_UI_PLUGIN_TYPE @GAMMARAY_UI_PLUGIN_TYPE@)
+set(GAMMARAY_PROBE_LIBRARY_TYPE @GAMMARAY_PROBE_LIBRARY_TYPE@)
+set(GAMMARAY_PROBE_PLUGIN_TYPE @GAMMARAY_PROBE_PLUGIN_TYPE@)
 set(GAMMARAY_INSTALL_QT_LAYOUT @GAMMARAY_INSTALL_QT_LAYOUT@)
 
 if(NOT GAMMARAY_OUTPUT_PREFIX)
