--- a/plugins/actioninspector/CMakeLists.txt
+++ b/plugins/actioninspector/CMakeLists.txt
@@ -24,6 +24,8 @@ if(NOT GAMMARAY_CLIENT_ONLY_BUILD)
         gammaray_actioninspector.json
         SOURCES
         ${gammaray_actioninspector_plugin_srcs}
+        TYPE
+        PROBE
     )
 
     target_link_libraries(gammaray_actioninspector_plugin Qt::Gui Qt::Widgets gammaray_core)
@@ -41,6 +43,8 @@ if(GAMMARAY_BUILD_UI)
         gammaray_actioninspector.json
         SOURCES
         ${gammaray_actioninspector_ui_plugin_srcs}
+        TYPE
+        UI
     )
 
     target_link_libraries(gammaray_actioninspector_ui_plugin gammaray_ui)
